--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,6 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
-    
   redis:
     restart: always
     container_name: redis
@@ -37,3 +36,11 @@ services:
       - 6379:6379
     volumes:
       - ./data/redis-data:/data
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    ports:
+      - 27017:27017
