--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,7 +69,7 @@ jobs:
         run: swift test
         working-directory: services/${{ matrix.app }}
         env:
-          DATABASE_URL: mongodb://root:password@localhost:27017
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
           RPC_URL: ${{ secrets.RPC_URL }}
           REDIS_URL: redis://localhost:6379
           USER_SERVICE_URL: "https://api.etdchain.net/stats/user"
